# api/openapi.yaml
@@ -352,7 +352,7 @@ paths:
                     type: string
                     example: Internal server error
   /api/admin-puskesmas/current/password:
-    post:
+    patch:
       tags:
         - Admin Puskesmas
       summary: Update admin puskesmas password
@@ -449,8 +449,6 @@ paths:
                         id:
                           type: integer
                         namaPuskesmas:
-                          type: string
-                        username:
                           type: string
                         telepon:
                           type: string
@@ -771,16 +769,6 @@ paths:
                   error:
                     type: string
                     example: Unauthorized
-        '409':
-          description: Admin puskesmas masih digunakan dan tidak dapat dihapus
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: Admin puskesmas masih digunakan dan tidak dapat dihapus
         '404':
           description: Not found
           content:
@@ -991,7 +979,7 @@ paths:
                     example: Internal server error
 
   /api/admin-apotek/current/password:
-    post:
+    patch:
       tags:
         - Admin Apotek
       summary: Update admin apotek password
@@ -1088,8 +1076,6 @@ paths:
                         id:
                           type: integer
                         namaApotek:
-                          type: string
-                        username:
                           type: string
                         telepon:
                           type: string
@@ -1410,16 +1396,6 @@ paths:
                   error:
                     type: string
                     example: Unauthorized
-        '409':
-          description: Admin apotek masih digunakan dan tidak dapat dihapus
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: Admin apotek masih digunakan dan tidak dapat dihapus
         '404':
           description: Not found
           content:
@@ -1640,7 +1616,7 @@ paths:
                     type: string
                     example: Internal server error
   /api/pengguna/current/password:
-    post:
+    patch:
       tags:
         - Pengguna
       summary: Update pengguna password
@@ -1744,8 +1720,6 @@ paths:
                         teleponKeluarga:
                           type: string
                         alamat:
-                          type: string
-                        username:
                           type: string
         '401':
           description: Unauthorized
@@ -2069,16 +2043,6 @@ paths:
                   error:
                     type: string
                     example: Unauthorized
-        '409':
-          description: Pengguna masih digunakan dan tidak dapat dihapus
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: Pengguna masih digunakan dan tidak dapat dihapus
         '404':
           description: Not found
           content:
@@ -2135,8 +2099,6 @@ paths:
                             telepon:
                               type: string
                             alamat:
-                              type: string
-                            username:
                               type: string
         '401':
           description: Unauthorized
@@ -2426,16 +2388,6 @@ paths:
                   error:
                     type: string
                     example: Not found
-        '409':
-          description: Obat masih digunakan dan tidak dapat dihapus
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: Obat masih digunakan dan tidak dapat dihapus
         '401':
           description: Unauthorized
           content:
@@ -2496,8 +2448,6 @@ paths:
                             telepon:
                               type: string
                             alamat:
-                              type: string
-                            username:
                               type: string
                         pengguna:
                           type: object
@@ -2910,16 +2860,6 @@ paths:
                   error:
                     type: string
                     example: Not found
-        '409':
-          description: Pasien masih digunakan dan tidak dapat dihapus
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: Pasien masih digunakan dan tidak dapat dihapus
         '500':
           description: Internal server error
           content:
@@ -2976,8 +2916,6 @@ paths:
                                   type: string
                                 alamat:
                                   type: string
-                                username:
-                                  type: string
                             pengguna:
                               type: object
                               properties:
@@ -2990,8 +2928,6 @@ paths:
                                 teleponKeluarga:
                                   type: string
                                 alamat:
-                                  type: string
-                                username:
                                   type: string
                             beratBadan:
                               type: integer
@@ -3413,8 +3349,6 @@ paths:
                                   type: string
                                 alamat:
                                   type: string
-                                username:
-                                  type: string
                         pasien:
                           type: object
                           properties:
@@ -3433,8 +3367,6 @@ paths:
                                   type: string
                                 alamat:
                                   type: string
-                                username:
-                                  type: string
                             pengguna:
                               type: object
                               properties:
@@ -3447,8 +3379,6 @@ paths:
                                 teleponKeluarga:
                                   type: string
                                 alamat:
-                                  type: string
-                                username:
                                   type: string
                             beratBadan:
                               type: integer
